// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test in GifGrid component should show the component snapshot 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    test
     
  </h3>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Test in GifGrid component should show the items when is charge images from useFetchGif 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    test
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="test title"
      url="http://example.com"
    />
    <GifGridItem
      id="DEF"
      key="DEF"
      title="test titless"
      url="http://example.com"
    />
  </div>
</Fragment>
`;
